<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpotMob</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
        <string name="help">Help</string>
        <string name="about">About</string>
        
    <string name="spots_tab">Spots</string>
    <string name="my_bids_tab">My Bids</string>
    <string name="my_items_tab">My Items</string>

    <!-- Login Screen -->
    <string name="login_button_text">Login</string>
    <string name="login_username_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="forgot_password_text">Forgot Password? Click Here</string>
    
    
    <!-- Register Screen -->
    <string name="register_button_text">Register</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="register_description">SpotMob Registration</string>
    <string name="disclaimerText">* Please make sure you enter correct info as the buyer will use this number to contact you when a bid is accepted. You number is hidden from outside world unless and until you accept a bid.</string>
    
    
    
    
        <string name="city_prompt">City</string>

    <string-array name="city_array">
        <item>San Francisco</item>
        <item>Santa Clara</item>
        <item>Fremont</item>
        <item>Sacramento</item>
        <item>Hayward</item>
        <item>San Jose</item>
        <item>Oakland</item>
        <item>Dublin</item>
    </string-array>
    
    
        <string name="state_prompt">State</string>

    <string-array name="state_array">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string name="country_prompt">Country</string>

    <string-array name="country_array">
        <item>USA</item>
    </string-array>
    <string-array name="category_array">
        <item>General</item>
        <item>Restaurant</item>
        <item>Sports</item>
        <item>Parking</item>
        <item>Movies</item>
        <item>Concerts</item>
        <item>Theme Park</item>
    </string-array>
    
        <string-array name="filter_category_array">
        <item>All Categories</item>
        <item>General</item>
        <item>Restaurant</item>
        <item>Sports</item>
        <item>Parking</item>
        <item>Movies</item>
        <item>Concerts</item>
        <item>Theme Park</item>
    </string-array>
    
    
    
</resources>