<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" 
        android:layout_margin="10dp" 
        android:background="#ffffff"
        
        >

        <TextView
            android:id="@+id/spotmobRegisterLabletextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SpotMob Registration"
                        android:textColor="#00baff"
                    android:textSize="18dip"
                    android:textStyle="bold" 
          />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" 
            android:layout_margin="4dip"
            android:background="@drawable/gradient_edit_text"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" 
                       android:layout_margin="4dip"
            android:background="@drawable/gradient_edit_text"
            />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword" 
                       android:layout_margin="4dip"
            android:background="@drawable/gradient_edit_text"
            />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="phone" 
                       android:layout_margin="4dip"
            android:background="@drawable/gradient_edit_text"
            />

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000" />

        <TextView
            android:id="@+id/disclaimerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimerText" />

        <Button
            android:id="@+id/registerButton"
            style="@style/SmallButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:text="@string/register_button_text" />
    </LinearLayout>

</ScrollView>