<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ececec"
    
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:background="#ffffff"
        android:layout_margin="10dip"
        android:padding="10dip"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login to SpotMob"
            android:textColor="#00baff"
                    android:textSize="18dip"
                    android:textStyle="bold" 
            />

        <EditText
            android:id="@+id/loginUsernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_username_hint"
            android:inputType="textEmailAddress" 
                       android:layout_margin="4dip"
            android:background="@drawable/gradient_edit_text"
            />

        <EditText
            android:id="@+id/loginPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" 
                       android:layout_margin="4dip"
            android:background="@drawable/gradient_edit_text"
            >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/loginButton"
                style="@style/SmallButtonText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_selector"
                android:onClick="clickLoginButton"
                android:text="@string/login_button_text" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:background="#ffffff"
        android:layout_margin="10dip"
        android:padding="10dip"
        >

        <TextView
            android:id="@+id/registerLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New User Register"
            android:textColor="#00baff"
            android:textSize="18dip"
            android:textStyle="bold" 
            />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tap Here to Register for FREE!" 
            android:onClick="clickRegisterButton"
			android:clickable="true"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_margin="10dip"
        android:padding="10dip"
        android:background="#ffffff"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:textColor="#00baff"
            android:textSize="18dip"
            android:textStyle="bold" 
            />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:onClick="clickForgotPassword"
            android:text="Don't you worry! Tap here to Reset your Password" />

    </LinearLayout>

</LinearLayout>